package com.techlad.onevalet.utils

object TestTags {

    const val SEARCH_BAR = "search_bar"
    const val DEVICES_LIST = "devices_list"
    const val EDIT_TEXT_CROSS_BTN = "edit_text_cross_btn"
}